# schema/Authentication.go
@@ -1,12 +1,11 @@
 package schema
 
 type Register struct {
-	Role          []string `json:"role" binding:"required"`
-	ApplicationId string   `json:"application_id"`
-	CompanyId     string   `json:"company_id"`
-	Email         string   `json:"email" binding:"required"`
-	Username      string   `json:"username" binding:"required"`
-	Password      string   `json:"password" binding:"required"`
+	Role      []string `json:"role" binding:"required"`
+	Email     string   `json:"email" binding:"required"`
+	Username  string   `json:"username" binding:"required"`
+	Password  string   `json:"password" binding:"required"`
+	CompanyId string   `json:"company_id" binding:"required"`
 }
 
 type Login struct {
